--- a/css/main.css
+++ b/css/main.css
@@ -82,3 +82,16 @@ p {
     font-size: 2.23rem;
     font-family: ABeeZee, Verdana, Geneva, sans-serif;
 }
+
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 1) { 
+}
+
+@media screen 
+  and (min-device-width: 1200px) 
+  and (max-device-width: 1600px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (min-resolution: 192dpi) { 
+}
