--- a/css/main.css
+++ b/css/main.css
@@ -83,15 +83,27 @@ p {
     font-family: ABeeZee, Verdana, Geneva, sans-serif;
 }
 
-@media screen 
-  and (min-device-width: 1200px) 
-  and (max-device-width: 1600px) 
-  and (-webkit-min-device-pixel-ratio: 1) { 
+@media only screen and (min-width: 1200px) {
+    body,
+    button,
+    input {
+        font-size: 3rem;
+        line-height: 1.3;
+    }
+    body {
+        margin-top: 9rem;
+    }
 }
 
-@media screen 
-  and (min-device-width: 1200px) 
-  and (max-device-width: 1600px) 
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (min-resolution: 192dpi) { 
+@media only screen and (min-width: 25em) {
+    body,
+    button,
+    input {
+        font-size: 2rem;
+        line-height: 1.3;
+         color: #3E547A;
+    }
+    body {
+        margin-top: 10rem;
+    }
 }
