--- a/css/main.css
+++ b/css/main.css
@@ -52,13 +52,13 @@ p {
     width: 50px;
     line-height: 50px;
 
-    border-radius: 30px; 
-    border-radius: 30px;
+    border-radius: 50px; 
+    border-radius: 50px;
 
     background-color: black;
     color: white;
     text-align: center;
-    font-size: 1.4em;
+    font-size: 1em;
     align-content: center;
     font-family: ABeeZee, Verdana, Geneva, sans-serif;
 }
@@ -87,23 +87,25 @@ p {
     body,
     button,
     input {
-        font-size: 3rem;
+        font-size: 2rem;
+        line-height: 1.3;
+         color: black;
+    }
+    body {
+        margin-top: 10rem;
+    }
+}
+ 
+@media only screen and (min-width: 38em) {
+    body,
+    button,
+    input {
+        font-size: 1.5rem;
         line-height: 1.3;
     }
     body {
         margin-top: 9rem;
     }
-}
-
-@media only screen and (min-width: 25em) {
-    body,
-    button,
-    input {
-        font-size: 2rem;
-        line-height: 1.3;
-         color: #3E547A;
-    }
-    body {
-        margin-top: 10rem;
-    }
+     border-radius: 50px; 
+    border-radius: 50px;
 }
